[package]
name = "taskmao"
version = "0.1.0"
authors = ["Tyler Boright <tyler@tylerboright.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.2"
dirs = "3.0"
serde = { version = "1.0", features = ["derive"]  }

[dependencies.rusqlite]
git = "https://github.com/rusqlite/rusqlite"
features = ["bundled"]
