[package]
name = "taskmao"
description = "Gain power through noticing. Notice how you spend your time"
license = "MIT"
readme = "readme.md"
version = "0.2.1"
authors = ["Tyler Boright <tyler@tylerboright.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "3.0.0-beta.4"
dialoguer = "0.8.0"
dirs = "3.0"
lazy_static = "1.4.0"
regex = "1"
serde = { version = "1.0", features = ["derive"]  }
toml = "0.5"
uuid = { version = "0.4", features = ["v4"] }

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]
